--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,12 @@
 .header{
-    padding: 40px 0px;
+    padding: 40px 0px; 
+    position: relative ;
+    z-index: 2;
 
     & .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
+       
     }
 }
