--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -2,18 +2,78 @@
 .login {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(to right,#ffedbb 0% 50%, #ffffff 50% 100%);
+    background-color: #ffedbb;
 
     &__main-section{
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         width: 100%;
         justify-content: center;
     }
 
 
     &__form {
-        width: 35%;
-        border: 1px solid salmon;
+        width: 70%; 
+        position: relative;
+        margin-left: 50px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+
+        &__inputs {
+            margin-top: 20px; 
+            width: 60%;
+ 
+            .input__wrapper {
+                margin-top: 15px
+            }
+        }
+
+        button {
+            width: 25%;
+            margin-top: 20px;
+        }
+
+        &__forgot-password-link {
+            margin-top: 20px;
+
+        }
+
+        &__signup-text-wrapper > * {
+            display: inline-block;
+        }
+    
+        &__signup-text-wrapper > p {
+            margin-right: 5px;
+        }
+    };
+
+    &__form-wrapper {
+        display: flex;
+        justify-content: center; 
+        position: absolute;
+        width: 60%;
+        right: 0;
+        background-color: white;
+        height: 100vh;
+        top: 0;
+        z-index: 0;
+        border-radius: 50px 0 0 50px;
     }
+
+    &__bee-image{
+        width: 350px;
+		z-index: 2;
+		position: absolute;
+		top: 55%;
+		left: 50%;
+		transform: translateY(-50%) translateX(-120%);
+    }
+
+    &__title {
+        font-size: 40px;
+        font-weight: 600;
+    }
+
+   
 }
