--- a/src/pages/Registration/Registration.scss
+++ b/src/pages/Registration/Registration.scss
@@ -27,11 +27,11 @@
             .input__wrapper {
                 margin-top: 15px
             }
-        }
+        } 
 
         button {
             width: 25%;
-            margin-top: 50px;
+            margin-top: 20px;
         }
 
         &__forgot-password-link {
@@ -75,6 +75,40 @@
         font-weight: 600;
     }
 
+	&__gender-radio {
+		margin-top: 20px;
+	}
+	
+	&__gender-wrapper {
+		display: flex;
+		align-items: center;
+
+		& > * :last-child {
+			padding-right: 10px;
+		}
+	}
+	
+	&__gender-title {
+		color: #00000055;
+		margin-top: 10px;
+		margin-bottom: 5px;
+	}
+
+	&__gender-item {
+		display: flex;
+		align-items:center;
+		filter: grayscale(1);
+
+		& > p { 
+			padding-left: 5px;
+		}
+	}
+
+
+	&__terms {
+		margin-top: 10px;
+		color: #00000055;
+	}
    
 }
 
