--- a/src/components/Header/HomeHeader.scss
+++ b/src/components/Header/HomeHeader.scss
@@ -1,53 +1,116 @@
 .home-header {
-    width: calc(100% - 300px);
-    position: fixed;
-    top: 0%;
-    right: 0%;
-    padding: 20px;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	width: calc(100% - 300px);
+	position: fixed;
+	right: 0;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	z-index: 10;
 
-    &__title {
-        font-size: 30px;
-        text-transform: uppercase;
-    }
+	padding: 15px;
+	background-color: #ffffff;
 
+	&__logo {
+		display: none;
+	}
 
-    &__action-link {
-        outline: none;
-        border: none;
-        background-color: transparent;
-        cursor: pointer;
-    }
+	&__title {
+		font-size: 30px;
+		text-transform: uppercase;
+	}
 
-    &__action-link svg {
-        width: 20px;
-        fill: black;
-    }
+	&__action-link svg {
+		width: 20px;
+		height: 20px;
+	}
 
-    &__actions-list {
-        display: flex;
-        align-items: center;
-    }
+	&__actions-list .open button {
+		background-color: #fafafa;
+		margin-left: 0;
+	}
 
-    &__actions-item {
-        display: flex;
-        align-items: center;
-    }
+	&__actions-list {
+		display: flex;
+		align-items: center;
+		z-index: 5;
+	}
 
-    &__actions-item button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        margin: 0px 10px;
-    }
+	&__actions-item {
+		display: flex;
+		align-items: center;
+		background-color: #ffffff;
+		position: relative;
+	}
 
-    &__action-profile-img {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-    }
+	&__actions-item button {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 17px;
+		margin: 0 10px;
+		background-color: transparent;
+		border: none;
+		cursor: pointer;
+		z-index: 3;
+		background-color: #ffffff;
+		transition: background-color 1s ease-in-out;
+	}
+
+	&__action-profile-img {
+		width: 30px;
+		height: 30px;
+		border-radius: 50%;
+	}
+}
+
+@media (max-width: 1126px) {
+	.home-header {
+		width: calc(100% - 250px);
+	}
+}
+
+@media (max-width: 856px) {
+	.home-header {
+		width: calc(100% - 200px);
+		padding: 10px;
+
+		&__title {
+			font-size: 25px;
+		}
+
+		&__actions-item-notification {
+			display: none;
+		}
+	}
+}
+
+@media (max-width: 556px) {
+	.home-header {
+		width: 100%;
+		padding: 5px 10px;
+
+		&__logo {
+			display: inline-block;
+			padding: 5px;
+		}
+
+		&__actions-item button {
+			padding: 10px;
+			margin: 5px;
+		}
+
+		&__actions-list .open button {
+			margin-left: 5px;
+		}
+
+		&__action-profile-img {
+			width: 35px;
+			height: 35px;
+		}
+
+		&__title {
+			display: none;
+		}
+	}
 }
