--- a/src/components/SearchDropdown/SearchDropdown.scss
+++ b/src/components/SearchDropdown/SearchDropdown.scss
@@ -1,15 +1,110 @@
-.search-dropdown { 
+.search-dropdown {
+	&__input {
+		padding: 16px;
+		font-size: 18px;
+		outline: none;
+		background-color: #fafafa;
+		border: none;
+		transform: translateX(100%);
+		transform-origin: right;
+		opacity: 0;
+		transition: transform 0.3s ease, opacity 0.5s ease;
+	}
 
-    &__input {
-       padding: 16px;
-       font-size: 16px;
-       outline: none;
-       background-color: #fafafa;
-       border: none; 
+	&__list {
+		display: none;
+	}
 
-    }
- 
-    .open {
-        background-color: red;
-    }
+	&__background {
+		display: none;
+	}
+
+	.open {
+		transform: translateX(20%);
+		z-index: 1;
+		opacity: 1;
+	}
+}
+
+@media (max-width: 856px) {
+	.open .search-dropdown {
+		pointer-events: all;
+
+		&__list {
+			display: block;
+			background-color: white;
+			position: fixed;
+			top: 13%;
+			padding: 20px;
+			left: 50%;
+			z-index: 25;
+			transform: translateX(-50%);
+			width: 90%;
+
+			p {
+				font-size: 20px;
+				color: #000000;
+				text-align: center;
+			}
+
+			li {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				border-bottom: 1px solid #00000022;
+				padding: 15px 0;
+
+				img {
+					width: 20px;
+					height: 20px;
+					object-fit: contain;
+				}
+
+				a {
+					font-size: 20px;
+					color: #000;
+				}
+			}
+
+			li:last-child {
+				border-bottom: none;
+			}
+		}
+	}
+
+	.search-dropdown {
+		width: 100%;
+		position: fixed;
+		top: 5%;
+		z-index: 20;
+		pointer-events: none;
+
+		&__input {
+			display: block;
+		}
+
+		.open {
+			position: fixed;
+			width: 90%;
+			display: block;
+			transform: translateX(-50%);
+			transform-origin: center;
+			left: 50%;
+			opacity: 1;
+			top: 5%;
+			z-index: 52;
+		}
+
+		.open &__background {
+			display: block;
+			position: fixed;
+			width: 100%;
+			height: 100vh;
+			left: 0;
+			top: 0;
+			z-index: 15;
+			background-color: rgba(0, 0, 0, 0.5);
+			backdrop-filter: blur(10px);
+		}
+	}
 }
