--- a/src/pages/ProjectOverview/ProjectOverview.scss
+++ b/src/pages/ProjectOverview/ProjectOverview.scss
@@ -300,3 +300,346 @@
 
 
 }
+
+@media (max-width: 1273px) {
+    .overview {
+        &__content-photo {
+            width: 120px;
+            height: 120px;
+        }
+        
+
+        &__features-list {
+            width: 75%;
+        }
+
+        &__service-list {
+            width: 65%;
+        }
+
+        &__links-box {
+            width: 100%;
+        }
+    }
+}
+
+@media (max-width: 1126px) {
+    .overview {
+        width: calc(100% - 250px); 
+        padding-bottom: 100px;
+
+        &__content-photo {
+            width: 100px;
+            height: 100px;
+        }
+        
+
+        &__features-list {
+            width: 80%;
+        }
+
+        &__service-list {
+            width: 75%;
+        }
+
+        &__links-box {
+            width: 100%;
+            justify-content: space-between;
+        }
+    }
+}
+
+@media (max-width: 1062px) {
+    .overview {
+        width: calc(100% - 250px); 
+        padding-bottom: 140px;
+
+        &__header-title {
+            font-size: 22px;
+        }
+
+        &__content-photo {
+            width: 140px;
+            height: 140px;
+        }
+        
+
+        &__features-list {
+            width: 90%;
+        }
+
+        &__service-list {
+            width: 90%;
+        } 
+
+        &__contact-button {
+            padding: 8px;
+            font-size: 14px;
+
+        }
+
+        &__cancel-link {
+            font-size: 14px;
+        }
+
+        &__content-files-item {
+            width: 90%;
+        }
+
+        &__content-photos-list {
+            justify-content: space-between;
+        }
+
+        &__content-photos-item {
+            width: 45%;
+        }
+
+        &__order-project {
+            width: 60%;
+        }
+
+        .service-number {
+            font-size: 20px;
+        }
+    }
+}
+
+@media (max-width: 927px) {
+    .overview {  
+
+        &__header-title {
+            font-size: 18px;
+        }
+        &__header-button {
+            font-size: 12px;
+        }
+
+        &__header-id {
+            font-size: 12px;
+            margin-top: 4px;
+        }
+
+        &__content-photo {
+            width: 120px;
+            height: 120px;
+        }
+        
+        &__skills-item p,
+        &__softwares-item p{
+           font-size: 14px;
+        }
+
+        &__overview-alert {
+            padding: 10px;
+        }
+
+        &__payment-link {
+            font-size: 16px;
+        } 
+
+        .service-number {
+            font-size: 20px;
+        }
+
+        &__links-box {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-top: 0px;
+        }
+
+        &__contact-button {
+            margin-top: 10px;
+        }
+
+        &__service-list {
+            margin: 10px 0px;
+        }
+
+        &__order-project {
+            width: 80%;
+        }
+    }
+}
+
+@media (max-width: 853px) {
+    .overview {  
+        width: calc(100% - 200px); 
+
+        &__header-title {
+            font-size: 16px;
+        }
+        &__header-button {
+            font-size: 12px;
+        } 
+
+        
+    }
+}
+
+
+@media (max-width: 820px) {
+    .overview {  
+        &__header {
+            flex-direction: column;
+            align-items: flex-start;
+        } 
+
+        &__header-button {
+            margin-top: 10px;
+        }
+
+        &__content-photo {
+            width: 160px;
+            height: 160px;
+        }
+
+        &__content-description {
+            text-align:justify ;
+        }
+
+        &__content-photos-item {
+            width: 90%;
+        }
+        
+        .service-number {
+            font-size: 16px;
+        }  
+
+        &__features-list {
+            flex-direction: column;
+            align-items: flex-start;
+            padding-bottom: 0px;
+        }
+
+        &__features-item {
+            margin-bottom: 30px;
+        }
+
+
+        &__payment-link {
+            font-size: 14px;
+            padding: 6px 10px;
+        } 
+
+        &__order-project {
+            width: 100%;
+            margin-left: 0px;
+        }
+
+        &__alert { 
+            font-size: 16px;
+            padding: 10px!important;
+        }
+    }
+}
+
+@media (max-width: 556px) {
+    .overview {
+        width: 100%; 
+        top: 9%;
+        padding-bottom: 200px;
+        display: flex;
+        align-items: center;
+
+        &__header {
+            width: 100%; 
+        }
+
+        &__header-id {
+            display:none;
+        }
+
+        &__header-button {
+            font-size: 14px;
+            margin-top: 15px;
+        }
+
+        &__header-title {
+            font-size: 28px;
+        }
+
+        &__main {
+            flex-direction: column;
+            align-items:center;
+        }
+
+       &__content-box {
+           width: 100%;
+           border:none;
+           padding-right: 0px;
+       }
+
+       &__content-title {
+           font-size: 14px;
+       }
+
+       &__content-description {
+           font-size: 16px;
+       }
+
+       &__content-files-list {
+           width: 100%;
+           margin: 0px;
+        }
+        &__content-files-item {
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        &__content-photo {
+            width: 140px;
+            height: 140px;
+            margin: 0px;
+            padding: 0px;
+        }
+
+        &__features-box {
+            width: 100%;
+            margin-top: 20px;
+        }
+        
+
+        &__features-list {
+            width: 100%;
+            flex-direction: row;
+        }
+
+        &__features-item {
+            width: 50%;
+        }
+
+        &__skills-list {
+            width: 100%;
+            align-items: flex-start;
+        }
+
+        &__softwares-item p, &__skills-item p {
+            font-size: 16px;
+        }
+
+        &__service-list {
+            width: 100%;
+            align-items: flex-start;
+
+        } 
+
+        &__alert {
+            display: none;
+        }
+
+        &__payment-link {
+            display: none;
+        } 
+
+        &__order-project {
+            display: none;
+        }
+
+        &__links-box {
+            flex-direction: row;
+            align-items: center;
+        }
+        
+    }
+}
